--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -1,14 +1,70 @@
-<!-- Do not forget to add in the Bootstrap CDN's so that you can utilise the pre-constructed HTML elements -->
 <!DOCTYPE html>
-<html class="no-js">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <!-- CODE HERE -->
+    <!--</nav> -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <img class="blogo" src="assets/bootstrap.png" alt="" />
+        <a class="navbar-brand" href="#">Home</a>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Link</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="containerss">
+      <ul class="items">
+        <li class="indi">Item I</li>
+      </ul>
+    </div>
+    <div class="containerss">
+      <ul class="items">
+        <li class="indi">Item II</li>
+      </ul>
+    </div>
+    <div class="containerss">
+      <ul class="items">
+        <li class="indi">Item III</li>
+      </ul>
+    </div>
+    <div class="containerss">
+      <ul class="items">
+        <li class="indi">Item IV</li>
+      </ul>
+    </div>
+    <div class="containerss">
+      <ul class="items">
+        <li class="indi">Item V</li>
+      </ul>
+    </div>
+
+    <div class="buttonspart">
+      <button type="button" class="btn btn-primary">Primary</button>
+      <button type="button" class="btn btn-secondary">Secondary</button>
+      <button type="button" class="btn btn-success">Success</button>
+      <button type="button" class="btn btn-danger">Danger</button>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
