--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -14,12 +14,56 @@
       rel="stylesheet"
     />
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="assets/style/stylesheet.css" />
   </head>
 
   <body>
     <!--Header (flower shop logo block element)-->
+
+    <header>
+      <img src="./assets/images/logo.png" />
+    </header>
     <!--Banner Jumbotron of the image-->
+
+    <section class="banner">
+      <div class="overlay"></div>
+      <div class="heading">
+        <h1>Beautiful Flowers</h1>
+        <button class="learnbut">
+          <h3>Learn More</h3>
+        </button>
+      </div>
+    </section>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-6 col-lg-3">
+          <img src="assets/images/truck-icon.png" alt="" />
+          <p>Citywide Delivery</p>
+        </div>
+
+        <div class="col-xs-12 col-md-6 col-lg-3">
+          <img src="assets/images/phone-icon.png" alt="" />
+          <p>Free Consultation</p>
+        </div>
+
+        <div class="col-xs-12 col-md-6 col-lg-3">
+          <img src="assets/images/payment-icon.png" alt="" />
+          <p>All payments accepted</p>
+        </div>
+
+        <div class="col-xs-12 col-md-6 col-lg-3">
+          <img src="assets\images\flower-icon.png" alt="" />
+          <p>Flowers for Every Occasion</p>
+        </div>
+      </div>
+    </div>
 
     <!--Four containers with img / text-->
     <!-- 4 containers -->
@@ -30,5 +74,21 @@
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
