--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -27,8 +27,11 @@
       <!--Header (flower shop logo block element)-->
       <img class="py-2" src="./assets/images/logo.png" alt="shop logo" />
       <!--Banner Jumbotron of the image-->
-      <div class="card text-white ">
-        <img src="./assets/images/flowershop.jpg" style="filter: brightness(.5);"/>
+      <div class="card text-white">
+        <img
+          src="./assets/images/flowershop.jpg"
+          style="filter: brightness(0.5)"
+        />
 
         <div
           class="
@@ -37,40 +40,47 @@
             flex-column
             justify-content-center
             align-items-center
-            ">
+          "
+        >
           <h1>Beautiful Flowers</h1>
-          <button class="bg-success">Learn more</button>
+          <button class="bg-success rounded-pill">Learn more</button>
         </div>
       </div>
       <!--Four containers with img / text-->
       <!-- 4 containers -->
       <div class="container bg-success p-5">
-        <div class="row">
-          <!-- flowers situation div -->
-          <div class="col d-inline-flex align-items-center">
-            <img src="./assets/images/flower-icon.png">
+        <!-- flowers situation div -->
+        <div class="row p-5">
+          <div
+            class="col-sm-12 col-md-6 col-xl-3 d-inline-flex align-items-center"
+          >
+            <img src="./assets/images/flower-icon.png" />
             <p>Flowers for every kind of situation</p>
           </div>
           <!-- Payments Div -->
-          <div class="col d-inline-flex align-items-center">
-            <img src="./assets/images/payment-icon.png">
+          <div
+            class="col-sm-12 col-md-6 col-xl-3 d-inline-flex align-items-center"
+          >
+            <img src="./assets/images/payment-icon.png" />
             <p>All major payments accepted</p>
           </div>
-        </div>
-        <div class="row">
+
           <!-- Consultation Div -->
-          <div class="col d-inline-flex align-items-center">
-            <img src="./assets/images/phone-icon.png">
+          <div
+            class="col-sm-12 col-md-6 col-xl-3 d-inline-flex align-items-center"
+          >
+            <img src="./assets/images/phone-icon.png" />
             <p>Free consultation</p>
           </div>
           <!-- Delivery Div -->
-          <div class="col d-inline-flex align-items-center">
-            <img src="./assets/images/truck-icon.png">
+          <div
+            class="col-sm-12 col-md-6 col-xl-3 d-inline-flex align-items-center"
+          >
+            <img src="./assets/images/truck-icon.png" />
             <p>City wide delivery</p>
           </div>
         </div>
       </div>
-
     </div>
     <!--Scripts required for bootstrap CDN-->
     <script
