--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -1,34 +1,71 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Flower Shop BS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Link and CDN required for bootstrap -->
+<head>
+  <meta charset="utf-8" />
+  <title>Flower Shop BS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Google Font - Lato -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
-    <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
-  </head>
+  <!-- Link and CDN required for bootstrap -->
 
-  <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+  <!-- Google Font - Lato -->
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+</head>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
+<body>
+  <section class="header">
+    <nav>
+      <a href="index.html"><img src="./assets/images/logo.png"></a>
+    </nav>
+    <div class="text-box">
+      <h1>Beautiful Flowers</h1>
+      <a href="http://www.9gag.com" target="_blank" class="learnMoreBtn">Learn More</a>
+    </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+  </section>
 
-    <!-- Delivery Div -->
+  <section class="info">
+    <div class="container">
+      <div class="row">
+        <div class="col-12  col-md-6 col-lg-3">
+          <img src="./assets/images/flower-icon.png" alt="">
+          <p>Flowers for every kind of situation</p>
+        </div>
+        <div class="col-12  col-md-6 col-lg-3">
+          <img src="./assets/images/payment-icon.png" alt="">
+          <p>All major payments kinds accepted</p>
+        </div>
+        <div class="col-12  col-md-6 col-lg-3">
+          <img src="./assets/images/phone-icon.png" alt="">
+          <p>Free consultation</p>
+        </div>
+        <div class="col-12  col-md-6 col-lg-3">
+          <img src="./assets/images/truck-icon.png" alt="">
+          <p>City wide delivery</p>
+        </div>
+        
+      </div>
+    </div>
+  </section>
+  <script src="" async defer></script>
+  <!--Header (flower shop logo block element)-->
 
-    <!--Scripts required for bootstrap CDN-->
-  </body>
+  <!--Banner Jumbotron of the image-->
+
+  <!--Four containers with img / text-->
+  <!-- 4 containers -->
+
+  <!-- Payments Div -->
+  <!-- Consultation Div -->
+
+  <!-- Delivery Div -->
+
+  <!--Scripts required for bootstrap CDN-->
+</body>
+
 </html>
