--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,8 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -18,17 +19,40 @@
   </head>
 
   <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+    <div class='header'>
+      <img src="./assets/images/logo.png" alt="">
+      
+    </div>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
-
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
+    <div class = 'mid'>
+      <p>Beautiful Flowers</p>
+      <a href="">Learn more</a>
+    </div>
+    <div class='bottom'>
+      <div class='container'>
+        <div class='row'>
+          <div class = 'col-12 col-lg-3 col-md-6'>
+            <img src="./assets/images/flower-icon.png" alt="">
+            <p id = 'onee'>Flowers for every kind of situation</p>
+          </div>
+          <div class = 'col-12 col-lg-3 col-md-6'>
+            <img src="./assets/images/payment-icon.png" alt="">
+            <p>All major payments kinds accepted</p>
+          </div>
+          <div class = 'col-12 col-lg-3 col-md-6' id ='three'>
+            <img src="./assets/images/phone-icon.png" alt="">
+            <p>Free consulation</p>
+          </div>
+          <div class = 'col-12 col-lg-3 col-md-6' id = 'four'>
+            <img src="./assets/images/\/truck-icon.png" alt="">
+            <p>City wide delivery</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!--Scripts required for bootstrap CDN-->
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
 </html>
