--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -10,8 +10,30 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   </head>
   <body>
-    <!-- CODE HERE -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <img src='./assets/bootstrap.png' alt="" width="60" height="60">
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="text-primary m-2" aria-current="page"  >Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="text-primary m-2"  >Link</a>
+          </li>
+    </nav>
+    <ul class="list-group">
+      <li class="list-group-item">Item I</li>
+      <li class="list-group-item">Item II</li>
+      <li class="list-group-item">Item III</li>
+      <li class="list-group-item">Item IV</li>
+      <li class="list-group-item">Item V</li>
+    </ul>
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-danger">Danger</button>
   </body>
 </html>
