--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -10,8 +10,59 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" 
+    crossorigin="anonymous">
   </head>
   <body>
-    <!-- CODE HERE -->
+    <div>
+      <nav class ="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#">
+              <img alt="logo" src="assets/bootstrap.png" style="height:50px">
+          </a>
+          <ul class="navbar-nav">
+              <li class class="nav-item active">
+                  <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+              </li>
+          </ul>
+      </nav>
+      <div>
+          <ul class="list-group">
+              <li class="list-group-item">
+                  Item 1
+              </li>
+              <li class="list-group-item">
+                  Item 2
+              </li>
+              <li class="list-group-item">
+                  Item 3
+              </li>
+              <li class="list-group-item">
+                  Item 4
+              </li>
+              <li class="list-group-item">
+                  Item 5
+              </li>
+          </ul>
+          <form>
+              <div class="btn btn-primary">
+                  Primary
+              </div>
+              <div class="btn btn-secondary">
+                  Secondary
+              </div>
+              <div class="btn btn-success">
+                  Success
+              </div>
+              <div class="btn btn-danger">
+                  Danger
+              </div>
+          </form>
+      </div>
+  </div>
   </body>
 </html>
