--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,6 +7,12 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
+    <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+    crossorigin="anonymous"
+  />
 
     <!-- Google Font - Lato -->
     <link
@@ -19,16 +25,81 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <header>
+      <div class="logo container">
+        <img src="assets/images/logo.png" alt="Logo of the shop">
+      </div>
+    </header>
     <!--Banner Jumbotron of the image-->
+  
+    <div class="jumbotron" style="background-image:
+     linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+    url(./assets/images/flowershop.jpg)">
+      <div class="d-flex justify-content-center align-content-center">
+      <h1>Beautiful Flowers</h1>
+      </div>
+      <div class="d-flex justify-content-center align-content-center">
+      <a class="btn btn-success btn-lg" href="#" role="button" id="learnMore">Learn more</a>
+      </div>
+    </div>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
+<!--Making the footer with bootstrap grid-->
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+<div class="container-fluid" id="footerContainer">
 
-    <!-- Delivery Div -->
+<div class="row">
+
+      <div class="col-xs-12 col-sm-12 col-md-6 col-xl-3" id="footerSelector">
+        <img src="assets/images/flower-icon.png">
+        <p>Flowers for every kind of situation</p>
+      </div>
+
+
+
+      <div class="col-xs-12 col-sm-12 col-md-6 col-xl-3" id="footerSelector">
+        <img src="assets/images/payment-icon.png">
+        <p>All major payments accepted</p>
+      </div>
+
+
+
+
+      <div class="col-xs-12 col-sm-12 col-md-6 col-xl-3" id="footerSelector">
+        <img src="assets/images/phone-icon.png">
+        <p>Free consultation</p>
+      </div>
+
+
+
+
+      <div class="col-xs-12 col-sm-12 col-md-6 col-xl-3" id="footerSelector">
+        <img src="assets/images/truck-icon.png">
+        <p>City wide delivery</p>
+      </div>
+
+
+
+    </div>
+
+    </div>
 
     <!--Scripts required for bootstrap CDN-->
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"
+  ></script>
+
+  <script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"
+  ></script>
+
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
