--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -4,20 +4,52 @@
     <meta charset="utf-8" />
     <title>Flower Shop BS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
-
-    <!-- Link and CDN required for bootstrap -->
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+    integrity="undefined" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/78ccc250b3.js" crossorigin="anonymous"></script>
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
     />
-    <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="./assets/style/stylesheet.css" />
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark justify-content-between bg-light p-2 border-bottom">
+      <a class="navbar-brand" href="#">
+        <img alt="Brand" src="assets/images/logo.png">
+      </a>
+    </nav>
+
+      <div class="card bg-dark text-white rounded-0">
+        <img class="card-img" src="./assets/images/flowershop.jpg" alt="Card image">
+        <div class="card-img-overlay d-flex">
+          <div class="align-self-center mx-auto text-center">
+          <h1 class="card-title font-weight-bold">Beautiful Flowers</h1>
+          <a class="btn btn-success btn-lg rounded-pill" href="#" role="button">Learn more</a>
+        </div>
+        </div>
+      </div>
+<div id="green" class="d-flex flex-wrap row text-center px-5">
+      <div class="col-6 d-flex align-items-center justify-content-center px-5 py-3">
+        <img class="h-50" src="assets/images/flower-icon.png">
+          <p class="card-text p-3">Flowers for every kind of situation</p>
+      </div>
+      <div class="col-6 d-flex align-items-center justify-content-center px-5 py-3">
+        <img class="h-50" src="assets/images/payment-icon.png">
+          <p class="card-text p-3 w-50">All major payment kinds accepted</p>
+      </div>
+      <div class="col-6 d-flex align-items-center justify-content-center px-5 py-3">
+        <img class="h-50" src="assets/images/phone-icon.png">
+          <p class="card-text p-3">Free consultation</p>
+      </div>
+      <div class="col-6 d-flex align-items-center justify-content-center px-5 py-3">
+        <img class="h-50" src="assets/images/truck-icon.png">
+          <p class="card-text p-3">City wide delivery</p>
+      </div>
+    </div>
     <!--Header (flower shop logo block element)-->
     <!--Banner Jumbotron of the image-->
 
